# loaniq

./: .env  app.py  calculations.py  db.py  main.py  pyproject.toml  requirements.txt
modules/: application.py  emi_calculator.py  portfolio.py  risk_analysis.py
sql/: seed.py
