[project]
name = "loaniq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=40.23.0",
    "mysql>=0.0.3",
    "mysql-connector>=2.2.9",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.3",
    "plotly-express>=0.4.1",
    "streamlit>=1.58.0",
    "utils>=1.0.2",
]
